apps/wallabag/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  namespace: wallabag
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wallabag
  template:
    metadata:
      labels:
        app: wallabag
    spec:
      enableServiceLinks: false
      containers:
        - name: wallabag
          image: wallabag/wallabag:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /var/www/wallabag/web/assets/images
              subPath: images
            - name: data
              mountPath: /var/www/wallabag/data
              subPath: data
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "10m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wallabag-data
