apps/wallabag/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallabag
  namespace: wallabag
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: authelia-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: wallabag.sanxer.dk
      http:
        paths:
          - backend:
              service:
                name: wallabag
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - wallabag.sanxer.dk
      secretName: wallabag-tls
